--- a/packages/cas/package.json
+++ b/packages/cas/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esmkit/passport-cas",
   "version": "0.1.0",
-  "description": "",
+  "description": "CAS strategy for Passport.js authentication",
   "author": "Billgo <hi@billgo.me>",
   "bugs": "https://github.com/esmkit/passport-plugins/issues",
   "license": "MIT",
@@ -33,7 +33,14 @@
     "build:esm": "bunx tsup",
     "example": "bun run --watch examples/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "https": "^1.0.0",
+    "node-uuid": "^1.4.8",
+    "passport-strategy": "^1.0.0",
+    "url": "^0.11.0",
+    "util": "^0.11.0",
+    "xml2js": "^0.4.19"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
     "@devjskit/copy-files": "^1.0.0",
@@ -42,8 +49,12 @@
     "@types/bun": "^1.0.5",
     "@types/node": "^20.10.6",
     "@types/web": "^0.0.132",
+    "passport": "0.4.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "passport": "^0.4.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
