--- a/packages/saml/package.json
+++ b/packages/saml/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esmkit/passport-saml",
   "version": "0.1.0",
-  "description": "",
+  "description": "This is a SAML 2.0 authentication provider for Passport, the Node.js authentication library.",
   "author": "Billgo <hi@billgo.me>",
   "bugs": "https://github.com/esmkit/passport-plugins/issues",
   "license": "MIT",
@@ -33,7 +33,15 @@
     "build:esm": "bunx tsup",
     "example": "bun run --watch examples/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@xmldom/xmldom": "^0.7.6",
+    "debug": "^4.3.2",
+    "passport-strategy": "^1.0.0",
+    "xml-crypto": "^2.1.3",
+    "xml-encryption": "^2.0.0",
+    "xml2js": "^0.4.23",
+    "xmlbuilder": "^15.1.1"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
     "@devjskit/copy-files": "^1.0.0",
@@ -42,8 +50,14 @@
     "@types/bun": "^1.0.5",
     "@types/node": "^20.10.6",
     "@types/web": "^0.0.132",
+    "express": "^4.18.2",
+    "passport": "0.4.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "express": "^4.18.2",
+    "passport": "^0.4.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
