--- a/packages/saml/package.json
+++ b/packages/saml/package.json
@@ -48,7 +48,9 @@
     "@devjskit/kill-port": "^1.0.0",
     "@devjskit/rimraf": "^1.0.0",
     "@types/bun": "^1.0.5",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@types/passport-strategy": "^0.2.38",
     "@types/web": "^0.0.132",
     "express": "^4.18.2",
     "passport": "0.4.1",
