--- a/packages/saml/package.json
+++ b/packages/saml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esmkit/passport-saml",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "This is a SAML 2.0 authentication provider for Passport, the Node.js authentication library.",
   "author": "Billgo <hi@billgo.me>",
   "bugs": "https://github.com/esmkit/passport-plugins/issues",
@@ -58,8 +58,7 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "express": "^4.18.2",
-    "passport": "^0.4.1"
+    "passport": ">=0.4.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
