--- a/packages/local/package.json
+++ b/packages/local/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esmkit/passport-local",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Username and password authentication strategy for Passport and Node.js.",
   "author": "Billgo <hi@billgo.me>",
   "bugs": "https://github.com/esmkit/passport-plugins/issues",
@@ -54,5 +54,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
-  }
+  },
+  "gitHead": "a07ed0c0544e025a9f5b6671ddd24c2fc670b16f"
 }
