--- a/packages/saml/package.json
+++ b/packages/saml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esmkit/passport-saml",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "This is a SAML 2.0 authentication provider for Passport, the Node.js authentication library.",
   "author": "Billgo <hi@billgo.me>",
   "bugs": "https://github.com/esmkit/passport-plugins/issues",
@@ -63,5 +63,6 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
-  }
+  },
+  "gitHead": "a07ed0c0544e025a9f5b6671ddd24c2fc670b16f"
 }
